CI/CD improved. Migrated to GitHub registry. Migrated to JDK21, Virtual Threads were turned on. Migrated to Postgres 16.1. Default caches turned on.
Data Generator migration problems were fixed.