@@ -2,7 +2,6 @@ package by.vk.datagen.data.location;
 
 import by.vk.datagen.data.city.City;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -13,7 +12,7 @@ import org.springframework.stereotype.Service;
 @Slf4j
 public class LocationGenerator {
 
-  private static final int LOCATIONS_PER_CITY_AMOUNT = 60;
+  private static final int LOCATIONS_PER_CITY_AMOUNT = 120;
   private final LocationRepository repository;
 
   public void generate() {
@@ -22,7 +21,7 @@ public class LocationGenerator {
             it -> new Location(null, new Point(ThreadLocalRandom.current().nextDouble(-90.0, 90.0),
                 ThreadLocalRandom.current().nextDouble(-180.0, 180.0)),
                 new City(ThreadLocalRandom.current().nextLong(1, 7))))
-        .collect(Collectors.toList()));
+        .toList();
     log.info("[LOCATIONS GENERATION] Ended.");
   }
 }
